Adding grunt and some visual improvements

--- a/package.json
+++ b/package.json
@@ -13,5 +13,17 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "url-exists": "^1.0.3"
+  },
+  "devDependencies": {
+    "bower": "^1.7.9",
+    "connect-livereload": "^0.5.4",
+    "grunt": "~0.4.4",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-express-server": "^0.5.3",
+    "grunt-jscs": "^3.0.1",
+    "grunt-open": "^0.2.3",
+    "jshint-stylish": "^2.2.1"
   }
 }
