--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.1",
-    "angular-promise-extras": "^0.1.7"
+    "angular-promise-extras": "^0.1.7",
+    "bootstrap": "^3.3.7"
   }
 }
