--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,9 @@
     "angular-ui-router": "^0.3.1",
     "angular-promise-extras": "^0.1.7",
     "bootstrap": "^3.3.7"
+  },
+  "devDependencies": {
+    "angular-mocks": ">=1.2.*",
+    "angular-scenario": ">=1.2.*"
   }
 }
