--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "url-exists": "^1.0.3"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "bower": "^1.7.9",
     "connect-livereload": "^0.5.4",
     "grunt": "~0.4.4",
+    "grunt-babel": "^6.0.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express-server": "^0.5.3",
     "grunt-jscs": "^3.0.1",
+    "grunt-karma": "^2.0.0",
     "grunt-open": "^0.2.3",
-    "jshint-stylish": "^2.2.1"
+    "jasmine-core": "^2.4.1",
+    "jshint-stylish": "^2.2.1",
+    "karma": "^1.2.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs2-launcher": "^0.5.0"
   }
 }
