--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "karma-babel-preprocessor": "^6.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs2-launcher": "^0.5.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "bower install && grunt lint && grunt test"
   }
 }
