--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "heroku-postbuild": "bower install && grunt lint && grunt test && grunt build"
   },
   "author": "",
   "license": "ISC",
@@ -21,21 +22,21 @@
     "grunt": "~0.4.4",
     "grunt-babel": "^6.0.0",
     "grunt-cli": "^1.2.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-env": "^0.4.4",
     "grunt-express-server": "^0.5.3",
     "grunt-jscs": "^3.0.1",
     "grunt-karma": "^2.0.0",
     "grunt-open": "^0.2.3",
+    "grunt-preprocess": "^5.1.0",
     "jasmine-core": "^2.4.1",
     "jshint-stylish": "^2.2.1",
     "karma": "^1.2.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs2-launcher": "^0.5.0"
-  },
-  "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "bower install && grunt lint && grunt test"
   }
 }
