--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-express-server": "^0.5.3",
     "grunt-jscs": "^3.0.1",
     "grunt-karma": "^2.0.0",
+    "grunt-ng-annotate": "^2.0.2",
     "grunt-open": "^0.2.3",
     "grunt-preprocess": "^5.1.0",
     "jasmine-core": "^2.4.1",
